--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot==20.6
-requests==2.31.0
-beautifulsoup4==4.13.3
-googletrans==4.0.2
+python-telegram-bot>=20.0
+requests>=2.31.0
+python-dotenv>=0.19.0  
